--- a/flask_app/templates/orders.html
+++ b/flask_app/templates/orders.html
@@ -20,7 +20,7 @@
                 <td>{{ order.cookie_type }}</td>
                 <td>{{ order.number_boxes }}</td>
                 <td>
-                    <a href="/order/edit/{{ order.id }} ">Edit</a>
+                    <a href="/cookies/edit/{{ order.id }} ">Edit</a>
                 </td>
         {% endfor %}
         </tbody>
